# deploy_test

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  python-publish.yml  testing.yml
.github/workflows/: python-publish.yml
about/: index.html
docs/: about.md  index.md
search/: search_index.json
src/deploy_test/: __init__.py  dummy.py
tests/: __init__.py  test_general.py
