[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deploy_test"]

[project]
name = "deploy_test_jdp72"
version = "1.0.7"
authors = [
  { name="Jacob Peterson", email="jdpeterson072@gmail.com" },
]
description = "Testing github actions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

]
